Stripe(not finished) and small fixes