@@ -1,6 +1,5 @@
 package org.teamchallenge.bookshop.util;
 
-import jakarta.xml.bind.DatatypeConverter;
 import org.imgscalr.Scalr;
 
 import javax.imageio.ImageIO;
@@ -8,15 +7,25 @@ import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Base64;
 
 public class ImageUtil {
 
-    public static BufferedImage resizeImageByHeight(BufferedImage originalImage, int targetHeight) {
-        return Scalr.resize(originalImage, Scalr.Method.QUALITY, Scalr.Mode.FIT_TO_HEIGHT, targetHeight);
-    }
+    public static BufferedImage resizeImage(BufferedImage originalImage, int targetWidth, int targetHeight) {
+        int originalWidth = originalImage.getWidth();
+        int originalHeight = originalImage.getHeight();
+        float aspectRatio = (float) originalWidth / originalHeight;
 
+        if (originalWidth > originalHeight) {
+            targetHeight = Math.round(targetWidth / aspectRatio);
+        } else {
+            targetWidth = Math.round(targetHeight * aspectRatio);
+        }
+
+        return Scalr.resize(originalImage, Scalr.Method.QUALITY, Scalr.Mode.AUTOMATIC, targetWidth, targetHeight);
+    }
     public static BufferedImage base64ToBufferedImage(String base64String) {
-        byte[] imageBytes = DatatypeConverter.parseBase64Binary(base64String);
+        byte[] imageBytes = Base64.getDecoder().decode(base64String);
         try (ByteArrayInputStream bais = new ByteArrayInputStream(imageBytes)) {
             return ImageIO.read(bais);
         } catch (Exception e) {
@@ -26,7 +35,8 @@ public class ImageUtil {
 
     public static String bufferedImageToBase64(BufferedImage image) {
         try {
-            return DatatypeConverter.printBase64Binary(bufferedImageToBytes(image));
+            byte[] imageBytes = bufferedImageToBytes(image);
+            return Base64.getEncoder().encodeToString(imageBytes);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
